--- a/index.html
+++ b/index.html
@@ -9,114 +9,89 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="Matheus Cezar - Impul.site" name="author">
-<!-- Primary Meta Tags -->
+  <!-- Primary Meta Tags -->
   <title>Barbearia Freitas Barber</title>
-
-<meta name="title" content="A Melhor Barbearia de Piçarras | Freitas Barber">
-<meta name="description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://freitasbarber.com.br">
-<meta property="og:title" content="Barbearia Freitas Barber">
-<meta property="og:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
-<meta property="og:image" content="https://freitasbarber.com.br/img/frente.jpg">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://freitasbarber.com.br">
-<meta property="twitter:title" content="Barbearia Freitas Barber">
-<meta property="twitter:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
-<meta property="twitter:image" content="https://freitasbarber.com.br/img/frente.jpg">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="theme-color" content="#ffffff">
+  <meta name="title" content="A Melhor Barbearia de Piçarras | Freitas Barber">
+  <meta name="description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://freitasbarber.com.br">
+  <meta property="og:title" content="Barbearia Freitas Barber">
+  <meta property="og:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
+  <meta property="og:image" content="https://freitasbarber.com.br/img/frente.jpg">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://freitasbarber.com.br">
+  <meta property="twitter:title" content="Barbearia Freitas Barber">
+  <meta property="twitter:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
+  <meta property="twitter:image" content="https://freitasbarber.com.br/img/frente.jpg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
-
-
-<link rel="manifest" href="manifest.json">
-
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="application-name" content="Freitas Barber">
-<meta name="apple-mobile-web-app-title" content="Freitas Barber">
-<meta name="theme-color" content="#000000">
-<meta name="msapplication-navbutton-color" content="#000000">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="msapplication-starturl" content="/">
-
-
-    <script src='js/tabletop.js'></script>
-
-
-
+  <link rel="manifest" href="manifest.json">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Freitas Barber">
+  <meta name="apple-mobile-web-app-title" content="Freitas Barber">
+  <meta name="theme-color" content="#000000">
+  <meta name="msapplication-navbutton-color" content="#000000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="msapplication-starturl" content="/">
+  <script src='js/tabletop.js'></script>
   <script type="text/javascript" src='js/sheetsee.js'></script>
-
-
   <link rel="stylesheet" href="css/index.css">
   <link href="css/fonts.css" rel="stylesheet">
-<script type="application/ld+json">
-{
-  "@context": "http://schema.org",
-  "@type": "HairSalon",
-  "name": "Freitas Barber",
-  "image": "https://d33wubrfki0l68.cloudfront.net/img/827b73cee92e737d75ae58c02df4923f986ec25e/logo-white.png",
-  "@id": "",
-  "url": "https://www.freitasbarber.com.br",
-  "telephone": "47 99678 3270",
-  "priceRange": "2-30",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "Rua Tijucas, 140",
-    "addressLocality": "Picarras",
-    "postalCode": "88380-000",
-    "addressCountry": "BR"
-  },
-  "geo": {
-    "@type": "GeoCoordinates",
-    "latitude": -26.7742947,
-    "longitude": -48.6790704
-  },
-  "openingHoursSpecification": [{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": [
-      "Monday",
-      "Tuesday",
-      "Wednesday",
-      "Thursday",
-      "Friday",
-      "Saturday"
-    ],
-    "opens": "",
-    "closes": ""
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Monday",
-    "opens": "13:00",
-    "closes": "20:00"
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": [
-      "Tuesday",
-      "Wednesday",
-      "Thursday",
-      "Friday"
-    ],
-    "opens": "09:00",
-    "closes": "20:00"
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Saturday",
-    "opens": "09:00",
-    "closes": "18:00"
-  }],
-  "sameAs": "https://www.facebook.com/freitasbarber1977/"
-}
-</script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "HairSalon",
+      "name": "Freitas Barber",
+      "image": "https://d33wubrfki0l68.cloudfront.net/img/827b73cee92e737d75ae58c02df4923f986ec25e/logo-white.png",
+      "@id": "",
+      "url": "https://www.freitasbarber.com.br",
+      "telephone": "47 99678 3270",
+      "priceRange": "2-30",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Rua Tijucas, 140",
+        "addressLocality": "Picarras",
+        "postalCode": "88380-000",
+        "addressCountry": "BR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -26.7742947,
+        "longitude": -48.6790704
+      },
+      "openingHoursSpecification": [{
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+        "opens": "",
+        "closes": ""
+      }, {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": "Monday",
+        "opens": "13:00",
+        "closes": "20:00"
+      }, {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Tuesday", "Wednesday", "Thursday", "Friday"],
+        "opens": "09:00",
+        "closes": "20:00"
+      }, {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": "Saturday",
+        "opens": "09:00",
+        "closes": "18:00"
+      }],
+      "sameAs": "https://www.facebook.com/freitasbarber1977/"
+    }
+  </script>
 </head>
 
 <body class="cont fbr fbr_index" ontouchstart="">
@@ -141,12 +116,14 @@
       </div>
       <div class="content__cont">
         <h1 class="content__header"> A sua melhor imagem<br>começa aqui! </h1>
-        <p class="content__text">Alta qualidade em cortes de cabelo Masculino e Infantil. <br>
-        Cortes degradê, militar e tradicionais, cortes com risco e desenhos artísticos personalizados. <br> A combinação perfeita entre técnicas modernas de Hair stylist e habilidades de artesão!</p>
+        <p class="content__text">Alta qualidade em cortes de cabelo Masculino e Infantil. <br> Cortes degradê, militar
+          e tradicionais, cortes com risco e desenhos artísticos personalizados. <br> A combinação perfeita entre
+          técnicas modernas de Hair stylist e habilidades de artesão!</p>
         <div class="content__btns">
-          <a class="btn btn--regular btn--gradient btn--rounded" target="_blank"  href="https://wa.me/5547996783270"><span class="btn--gradient__text"><img src="img/whatsapp.svg"
-                alt="" class="hero-social-icon">Whatsapp</span></a><a class="btn btn--regular btn--underline btn--text" target="_blank" 
-            href="http://m.me/freitasbarber1977"> <img src="img/messenger.svg" alt="" class="hero-social-icon">Messenger</a>
+          <a class="btn btn--regular btn--gradient btn--rounded" target="_blank" href="https://wa.me/5547996783270"><span
+              class="btn--gradient__text"><img src="img/whatsapp.svg" alt="" class="hero-social-icon">Whatsapp</span></a><a
+            class="btn btn--regular btn--underline btn--text" target="_blank" href="http://m.me/freitasbarber1977">
+            <img src="img/messenger.svg" alt="" class="hero-social-icon">Messenger</a>
         </div>
         <div class="fb-like" data-href="https://www.facebook.com/freitasbarber1977/" data-layout="button" data-action="like"
           data-size="large" data-show-faces="false" data-share="true"></div>
@@ -221,7 +198,6 @@
     <input id="fullTableFilter" type="text" placeholder="filtrar por..."></input>
     <a class="clear">Clear</a>
   </div>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
       var URL = "1p7ilzd-_ZrnF3J6zPrfVvhnCs1My63RwO88nMdfHLsQ"
@@ -338,26 +314,25 @@
 
     function openClose() {
       if (currentHour != 12) {
-        if (currentDay >= 2 && currentDay <= 5) { //if current day is TER-SEX 
+        if (currentDay >= 2 && currentDay <= 5) {
           if (currentHour >= 8 && currentHour <= 20) {
-            //das 8 as 18 
             document.getElementById("closed").style.display = "none";
           } else {
             document.getElementById("open").style.display = "none";
           }
-        }
-        if (currentDay === 1) { // if current day is SEG 
-          if (currentHour >= 13 && currentHour <= 20) { //das 13 as 18 
-            document.getElementById("closed").style.display = "none";
-          } else {
-            document.getElementById("open").style.display = "none";
+          if (currentDay === 1) {
+            if (currentHour >= 13 && currentHour <= 20) {
+              document.getElementById("closed").style.display = "none";
+            } else {
+              document.getElementById("open").style.display = "none";
+            }
           }
-        }
-        if (currentDay === 6) {// if current day is SAB 
-          if (currentHour >= 8 && currentHour <= 18) {
-            document.getElementById("closed").style.display = "none";
-          } else {
-            document.getElementById("open").style.display = "none";
+          if (currentDay === 6) {
+            if (currentHour >= 8 && currentHour <= 18) {
+              document.getElementById("closed").style.display = "none";
+            } else {
+              document.getElementById("open").style.display = "none";
+            }
           }
         }
       } else {
@@ -367,42 +342,43 @@
     setInterval(openClose(), 5000);
   </script>
   <div class="hero-contacts-wrapper only-mobile">
-      <div class="wrapper left side-paddings">
-        <div class="hero-contacts">
-          <div class="hero-contact">
-            <img src="img/icon-clock.svg" alt="" class="hero-contact-icon">
-            <div>
-              <div class="hero-contact-title">Terça à Sexta: 9h - 20h</div>
-              <div class="hero-contact-subtitle">Segunda: 13h - 20h</div>
-              <div class="hero-contact-subtitle">Sábado: 9h - 18h</div>
-              <div class="hero-contact-live" id="open">ABERTO AGORA!</div>
-              <div class="hero-contact-live" id="closed" style="display: none;">FECHADO AGORA</div>
-            </div>
+    <div class="wrapper left side-paddings">
+      <div class="hero-contacts">
+        <div class="hero-contact">
+          <img src="img/icon-clock.svg" alt="" class="hero-contact-icon">
+          <div>
+            <div class="hero-contact-title">Terça à Sexta: 9h - 20h</div>
+            <div class="hero-contact-subtitle">Segunda: 13h - 20h</div>
+            <div class="hero-contact-subtitle">Sábado: 9h - 18h</div>
+            <div class="hero-contact-live" id="open">ABERTO AGORA!</div>
+            <div class="hero-contact-live" id="closed" style="display: none;">FECHADO AGORA</div>
           </div>
-          <div class="hero-contact"><img src="img/icon-location.svg" alt="" class="hero-contact-icon">
-            <div>
-              <div class="hero-contact-title">Rua Tijucas, 140</div>
-              <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
-              <div class="hero-contact-subtitle">Próximo a Natubras </div>
-              <a target="_blank" href="https://www.google.com.br/maps/place/Barbearia+FREITAS+BARBER/@-26.7755232,-48.6727507,15z/data=!4m2!3m1!1s0x0:0xea12f3d326cb2c5?ved=2ahUKEwiWp7Kx8szeAhXJgZAKHaPnCVcQ_BIwMXoECAUQCA">
-                <div class="hero-contact-live">VER NO MAPA</div>
-              </a>
-            </div>
+        </div>
+        <div class="hero-contact"><img src="img/icon-location.svg" alt="" class="hero-contact-icon">
+          <div>
+            <div class="hero-contact-title">Rua Tijucas, 140</div>
+            <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
+            <div class="hero-contact-subtitle">Próximo a Natubras </div>
+            <a target="_blank" href="https://www.google.com.br/maps/place/Barbearia+FREITAS+BARBER/@-26.7755232,-48.6727507,15z/data=!4m2!3m1!1s0x0:0xea12f3d326cb2c5?ved=2ahUKEwiWp7Kx8szeAhXJgZAKHaPnCVcQ_BIwMXoECAUQCA">
+              <div class="hero-contact-live">VER NO MAPA</div>
+            </a>
           </div>
-          <div class="hero-contact"><img src="img/icon-contato..svg" alt="" class="hero-contact-icon">
-            <div>
-              <a href="tel:47996783270">
-                <div class="hero-contact-title" title="Ligar para Freitas Barber">(47) 99678-3270</div>
-              </a>
-              <div class="hero-contact-link"><a title="Enviar e-mail para Freitas Barber" href="mailto:marcosfreitas1977@hotmail.com?subject=Contato site" class="link-color">marcosfreitas1977@hotmail.com</a></div>
-              <div class="hero-contact-live"><a title="Ir para a Pagina do Freitas Barber no Facebook" href="https://www.facebook.com/freitasbarber1977/" class="social-link-color"><img src="img/fb-icon.svg" class="hero-social-icon">/freitasbarber1977</a></div>
-            </div>
+        </div>
+        <div class="hero-contact"><img src="img/icon-contato..svg" alt="" class="hero-contact-icon">
+          <div>
+            <a href="tel:47996783270">
+              <div class="hero-contact-title" title="Ligar para Freitas Barber">(47) 99678-3270</div>
+            </a>
+            <div class="hero-contact-link"><a title="Enviar e-mail para Freitas Barber" href="mailto:marcosfreitas1977@hotmail.com?subject=Contato site"
+                class="link-color">marcosfreitas1977@hotmail.com</a></div>
+            <div class="hero-contact-live"><a title="Ir para a Pagina do Freitas Barber no Facebook" href="https://www.facebook.com/freitasbarber1977/"
+                class="social-link-color"><img src="img/fb-icon.svg" class="hero-social-icon">/freitasbarber1977</a></div>
           </div>
-          
         </div>
       </div>
-      <div class="hero-contacts-bg"></div>
     </div>
+    <div class="hero-contacts-bg"></div>
+  </div>
 </body>
 
 </html>
