--- a/agendamento/index.html
+++ b/agendamento/index.html
@@ -102,10 +102,15 @@
   </style>
 </head>
 
-<body class="cont fbr fbr_index" ontouchstart="">
+<body class="cont fbr fbr_index">
+
  <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://freitasbarber.simplybook.me/v2/#book" />
+     <script src="//simplybook.me/v2/widget/widget.js"></script>
+        <script>var widget = new SimplybookWidget({"widget_type":"iframe","url":"https:\/\/freitasbarber.simplybook.me","theme":"blur","theme_settings":{"timeline_modern_display":"as_slots","sb_base_color":"#75613c","body_bg_color":"#f0f0f0","dark_font_color":"#000000","light_font_color":"#ffffff","sb_busy":"#f5f5f5","sb_available":"#faf4dc"},"timeline":"modern_week","datepicker":"inline_datepicker","is_rtl":false,"app_config":{"predefined":{"provider":"1"}}});</script>
+
         </div>
 </body>
+
+
 
 </html>
