fixed bg color to match the iframe widget

--- a/agendamento/index.html
+++ b/agendamento/index.html
@@ -92,7 +92,7 @@
   <style>
        body, html
             {
-                margin: 0; padding: 0; height: 100%; overflow: auto;
+                margin: 0; padding: 0; height: 100%; overflow: auto;    background: #f0f0f0;
             }
 
             #content
