--- a/agendamento/index.html
+++ b/agendamento/index.html
@@ -16,13 +16,13 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://freitasbarber.com.br/agendamento">
-  <meta property="og:title" content="Barbearia Freitas Barber">
+  <meta property="og:title" content="Agendamento | Barbearia Freitas Barber">
   <meta property="og:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
   <meta property="og:image" content="https://freitasbarber.com.br/img/frente.jpg">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://freitasbarber.com.br/agendamento">
-  <meta property="twitter:title" content="Barbearia Freitas Barber">
+  <meta property="twitter:title" content="Agendamento | Barbearia Freitas Barber">
   <meta property="twitter:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
   <meta property="twitter:image" content="https://freitasbarber.com.br/img/frente.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
